<resources>
    <string name="app_name">A\'lem</string>
    <string name="login">Войти в аккаунт</string>
    <string name="localities">Места</string>
    <string name="favorites">Избранные</string>
    <string name="posts">Лента</string>
    <string name="menu_item_search">Поиск</string>
    <string name="menu_item_favorites">Избранные</string>
    <string name="menu_item_profile">Профайл</string>
    <string name="menu_item_about_us">О проекте</string>
    <string name="menu_item_faq">F.A.Q</string>
    <string name="favorites_empty_text">Ваш список \'Избранные\' пуст :(</string>
    <string name="localities_empty_text">Список локаций пуст :(</string>
    <string name="posts_empty_text">Список постов пуст :(</string>
    <string name="enter_email">E-mail адрес</string>
    <string name="enter_password">Пароль</string>
    <string name="login_text">Вход</string>
    <string name="signUp">Зарегестрировать аккаунт</string>
    <string name="enter_username">Username</string>
    <string name="signup_text">Регистрация</string>
    <string name="subscriptions">Подписки</string>
    <string name="subscriptions_empty_text">У вас нет подписок :(</string>
    <string name="login_zabil_parol">Забыли пароль?</string>
    <string name="login_sign_up">Не зарегистрированны?</string>
    <string name="enter_fullname">Имя Фамилия</string>
    <string name="select_region">Выберите регион</string>
    <string name="nav_bottom_menu_about_us">О нас</string>
    <string name="nav_bottom_menu_redaksiya">Редакция</string>
    <string name="nav_bottom_menu_call_us">Связаться с нами</string>
    <string name="nav_bottom_menu_ad_placement">Размещение рекламы</string>
    <string name="nav_bottom_menu_partners">Партнёрам</string>
    <string name="text_create_news">Создать новость</string>
    <string name="nav_tab_menu_alem_time">Alem time</string>
    <string name="nav_tab_menu_eldi_mekender">Елдi мекендер</string>
    <string name="alemtime_text_top_info">Узнай первым обо все что происходит в Казахстанском бизнесе!</string>
    <string name="post_week_text">Цитата недели</string>
    <string name="post_hot_text">Горячая новость</string>
    <string name="eldi_mekender_select_your_region">Выберите свой регион интереса</string>
    <string name="eldi_mekender_select_city_in_region">Выберите Населенный пункт в %1$s</string>
</resources>
