<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundDark"
    android:paddingLeft="32dp"
    android:paddingTop="24dp"
    android:paddingRight="32dp"
    android:paddingBottom="24dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/fragment_login_rl_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/fragment_signup_mbtn_signup">

                <ImageView
                    android:id="@+id/fragment_signup_iv_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="16dp"
                    app:srcCompat="@drawable/logo_alem_time" />

                <TextView
                    android:id="@+id/fragment_signup_tv_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fragment_signup_iv_logo"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/signup_text"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/fragment_signup_et_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fragment_signup_tv_signup"
                    android:ellipsize="end"
                    android:hint="@string/enter_fullname"
                    android:maxLines="1"
                    android:paddingBottom="24dp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/fragment_signup_et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fragment_signup_et_fullname"
                    android:ellipsize="end"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingBottom="24dp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/fragment_signup_et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fragment_signup_et_email"
                    android:ellipsize="end"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingBottom="24dp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/fragment_signup_tv_select_region"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fragment_signup_et_password"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/select_region"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp" />

                <LinearLayout
                    android:id="@+id/fragment_signup_ll_spinner_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fragment_signup_tv_select_region"
                    android:background="@drawable/rounded_all8dp_background"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <Spinner
                        android:id="@+id/fragment_signup_spinner_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorYellowDark" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fragment_signup_ll_spinner_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fragment_signup_ll_spinner_1"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_all8dp_background"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <Spinner
                        android:id="@+id/fragment_signup_spinner_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorYellowDark" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fragment_signup_ll_spinner_2"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/fragment_signup_checkbox_accept"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Согласен с "
                        android:textColor="@color/colorWhite"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Пользовательским соглашением"
                        android:textColor="@color/colorYellowDark"
                        android:textSize="12sp" />

                </LinearLayout>

            </RelativeLayout>

            <android.support.design.button.MaterialButton
                android:id="@+id/fragment_signup_mbtn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@android:color/transparent"
                android:gravity="center"
                android:text="@string/signUp"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                app:cornerRadius="50dp" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>