<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundDark">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="88dp"
                    android:layout_height="88dp"
                    android:scaleType="centerCrop"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp"
                    tools:src="@drawable/test_profile_image" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/drawer_auth_fragment_tv_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:text="Alex Drexler" />

                    <TextView
                        android:id="@+id/drawer_auth_fragment_tv_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp"
                        tools:text="г.Астана, Акмолинская область" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/drawer_auth_fragment_ll_create_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="24dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/shape_radius"
                    android:padding="16dp"
                    app:srcCompat="@drawable/ic_add" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/text_create_news"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/drawer_auth_fragment_tv_nav_alem_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_arrow_right"
                android:paddingLeft="24dp"
                android:paddingTop="8dp"
                android:paddingRight="24dp"
                android:paddingBottom="8dp"
                android:text="@string/nav_tab_menu_alem_time"
                android:textColor="@color/colorWhite"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/drawer_auth_fragment_tv_nav_eldi_mekender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_arrow_right"
                android:paddingLeft="24dp"
                android:paddingTop="8dp"
                android:paddingRight="24dp"
                android:paddingBottom="8dp"
                android:text="@string/nav_tab_menu_eldi_mekender"
                android:textColor="@color/colorWhite"
                android:textSize="22sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>